@@ -1,12 +1,24 @@
-import org.apache.commons.codec.binary.Base64;
+import java.io.IOException;
+
+import sun.misc.BASE64Encoder;
+import sun.misc.BASE64Decoder;
+import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
+import java.awt.image.BufferedImage;
+import javax.imageio.ImageIO;
+
 
 public class ImageDecode {
 
-	 public static byte[] decodeImage(String imageDataString) {
-        return Base64.decodeBase64(imageDataString);
+	public static BufferedImage decodeImage(String encodedBytes) throws IOException{
+	 	BASE64Decoder decoder = new BASE64Decoder();
+        byte[] decodedBytes = decoder.decodeBuffer(encodedBytes);
+        ByteArrayInputStream bis = new ByteArrayInputStream(decodedBytes);
+        BufferedImage image = ImageIO.read(bis);
+        bis.close();
+        return image;
     }
 
-    public static String encodeImage(byte[] imageByteArray) {
-        return Base64.encodeBase64URLSafeString(imageByteArray);
-    }   
+
+
 }
